app/assets/stylesheets/server_bar.css
.server-container {
    display: flex;
    position: absolute;
    left: -8px;
    top: -8px;
    align-items: baseline;
    width: 86px;
    height: 103vh;
    overflow: scroll;
    flex-direction: column;
    background-color: rgb(33,36,39);
    font-family: serif;
}

.server-icon::-webkit-scrollbar {
    width: 6px;               /* width of the entire scrollbar */
}

.server-icon::-webkit-scrollbar-track {
    background: rgb(47,49,54);        /* color of the tracking area */
}
  
.server-icon::-webkit-scrollbar-thumb {
    background-color: rgb(66,69,75);    /* color of the scroll thumb */
    border-radius: 20px;       /* roundness of the scroll thumb */  /* creates padding around scroll thumb */
}

/* background-color: rgb(32,34,37);
    width: 94px;
    height: 588px;
    margin-top: 0%;
    position: absolute;
    overflow: scroll;
    left: 0px; */

/* .html {
    background-color: rgb(32,34,37);
} */

.button:hover {
    cursor: pointer;
}

.server-icon {
    list-style-type: none;
    margin-left: -19%;
}

.server-button {
    color: #FFFFFF !important;
    text-transform: uppercase;
    background: rgb(55,58,63);
    padding: 20px;
    border: 4px solid rgb(55,58,63) !important;
    border-radius: 50%;
    display: flex;
    transition: all 0.3s ease 0s;
    width: 48px;
    justify-content: center;
    height: 47px;
    align-items: center;
    font-size: x-small;
    margin-bottom: 7px;
}

.server-li {
    text-decoration: none;
}

.server-button:hover {
    color: #494949 !important;
    border-radius: 50px;
    border-color: #494949 !important;
    transition: all 0.3s ease 0s;
}

.server-container ul {
    overflow: hidden;
    overflow-y: scroll;
    width: 112px;
    position: relative;
    left: -15px;
}

.add-server-button {
    width: 85px;
    display: block;
    align-self: center;
    margin-left: 3%;
}

.server-additional {
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    bottom: 10px;
    left: 14px;
    width: 45px;
    height: 63px;
    background-color: rgb(47,49,54);
    color: springgreen;
    border-radius: 50%;
}

